# pydantic-components

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
pydantic_components/: __init__.py  component.py  exceptions.py  provider.py  registry.py  resolver.py  utils.py
tests/: test_common.py
